Add color as optional variable